SVG graphic, changed to online location

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
         <div class="heading-centre">Banana Password</div>
         <div class="headingright"></div>
     </div>
-    <div class="Logo"><h2>Click Banana</h2><img src="./media/bananaSVGOMG.svg"></div>
+    <div class="Logo"><h2>Click Banana</h2><img src="https://openclipart.org/download/196028/Banana.svg"</a></div>
     <div class="Reserved-1"></div>
     <div class="Reserved-2"></div>
     <!--<div class="Options">-->
