word length and num of words functionality added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,13 +19,23 @@
     <div class="Logo"><h2>Click Banana</h2><img src="https://openclipart.org/download/196028/Banana.svg"</a></div>
     <div class="Reserved-1"></div>
     <div class="Reserved-2"></div>
-    <!--<div class="Options">-->
-        <!--<div class="option1"></div>-->
-        <!--<div class="option2"></div>-->
+    <div class="Options">
+        <div class="option1">
+            <h4>How Many words... Default is 4</h4>
+            <form id="word-form">
+                  <input type=number min="3" max="8" id="word-form" placeholder="default is 6..." rows="1" cols="5" maxlength="5" value="4"></input>
+            </form>
+        </div>
+        <div class="option2">
+            <h4>Word Length... </h4>
+            <form id="word-length-form">
+                <input type=number min="4" max="9" id="word-length-form" placeholder="default is 6..." rows="1" cols="5" maxlength="5" value="6"></input>
+            </form>
+        </div>
         <!--<div class="option3"></div>-->
         <!--<div class="option4"></div>-->
         <!--<div class="option5"></div>-->
-    <!--</div>-->
+    </div>
     <div class="Results"></div>
     <!--<div class="Footer"></div>-->
 </div>
