--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,9 +32,15 @@
                 <input type=number min="4" max="9" id="word-length-form" placeholder="default is 6..." rows="1" cols="5" maxlength="5" value="6"></input>
             </form>
         </div>
-        <!--<div class="option3"></div>-->
-        <!--<div class="option4"></div>-->
-        <!--<div class="option5"></div>-->
+        <div class="option3">
+            <h4>Future</h4>
+        </div>
+        <div class="option4">
+            <h4>Future</h4>
+        </div>
+        <div class="option5">
+            <h4>Future</h4>
+        </div>
     </div>
     <div class="Results"></div>
     <!--<div class="Footer"></div>-->
