Added break character function. Tidied up Functions

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,8 +32,25 @@
                 <input type=number min="4" max="9" id="word-length-form" placeholder="default is 6..." rows="1" cols="5" maxlength="5" value="6"></input>
             </form>
         </div>
+
         <div class="option3">
-            <h4>Future</h4>
+            <h4>Added Security - Change Break Character</h4>
+            <select id="special-character" name="special-character">
+                <ul class="dropdown-options">
+                <option value="-">-</option>
+                <option value="!">!</option>
+                <option value="@">@</option>
+                <option value="£">£</option>
+                <option value="$">$</option>
+                <option value="%">%</option>
+                <option value="^">^</option>
+                <option value="&">&</option>
+                <option value="*">*</option>
+                <option value="(">(</option>
+                <option value=")">)</option>
+                <option value="_">_</option>
+                <option value="+">+</option>
+            </select>
         </div>
         <div class="option4">
             <h4>Future</h4>
