More stable under clicking. Removed fr values, text causing movement

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
 <div class="grid-container">
     <div class="Heading">
         <div class="headingleft"></div>
-        <div class="heading-centre">Banana Password</div>
+        <div class="heading-centre"></div>
         <div class="headingright"></div>
     </div>
     <div class="Logo"><h2>Click Banana</h2><img src="https://openclipart.org/download/196028/Banana.svg"</a></div>
@@ -21,7 +21,7 @@
     <div class="Reserved-2"></div>
     <div class="Options">
         <div class="option1">
-            <h4>How Many words...</h4>
+            <h4>Words</h4>
             <select id="word-form">
                 <option value="3">3</option>
                 <option selected="selected" value="4">4</option>
@@ -30,7 +30,7 @@
             </select>
         </div>
         <div class="option2">
-            <h4>Min Word Length...</h4>
+            <h4>Length</h4>
             <select id="word-length-form">
                 <option value="3">3</option>
                 <option value="4">4</option>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="option3">
-            <h4>Change Break Character</h4>
+            <h4>Break</h4>
             <select id="special-character" name="special-character">
                 <ul class="dropdown-options">
                 <option value="!">!</option>
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div class="Results"></div>
-    <!--<div class="Footer"></div>-->
+    <div class="Footer"></div>
 </div>
 
 
