--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,7 +45,7 @@
         <div class="option3">
             <h4>Break</h4>
             <select id="special-character" name="special-character">
-                <ul class="dropdown-options">
+                <ul class="break-options">
                 <option value="!">!</option>
                 <option value="@">@</option>
                 <option value="£">£</option>
@@ -62,7 +62,12 @@
             </select>
         </div>
         <div class="option4">
-            <h4>Future</h4>
+            <h4>l33t</h4>
+            <select id="l33t" name="l33t">
+
+                    <option value="true">0n</option>
+                    <option selected="selected" value="false" >0ff</option>
+            </select>
         </div>
         <div class="option5">
             <h4>Future</h4>
