word count choice added. 1k-30k

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,7 +45,6 @@
         <div class="option3">
             <h4>Break</h4>
             <select id="special-character" name="special-character">
-                <ul class="break-options">
                 <option value="!">!</option>
                 <option value="@">@</option>
                 <option value="£">£</option>
@@ -64,13 +63,18 @@
         <div class="option4">
             <h4>l33t</h4>
             <select id="l33t" name="l33t">
-
                     <option value="true">0n</option>
                     <option selected="selected" value="false" >0ff</option>
             </select>
         </div>
         <div class="option5">
-            <h4>Future</h4>
+            <h4>WordCount</h4>
+            <select id="word-count" name="word-count">
+                    <option selected="selected" value="1k">1k</option>
+                    <option value="10k">10k</option>
+                    <option value="20k">20k</option>
+                    <option value="30k">30k</option>
+            </select>
         </div>
     </div>
     <div class="Results"></div>
