Options text size reduced. Css......

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -70,7 +70,7 @@
             </select>
         </div>
         <div class="option5">
-            <h4>WordCount</h4>
+            <h4>Count</h4>
             <select id="word-count" name="word-count">
                     <option selected="selected" value="1k">1k</option>
                     <option value="10k">10k</option>
