--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Banana Password</title>
-    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1; minimum-scale=1; user-scalable=0;" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link type="text/css" href="css/main.css" rel="stylesheet">
     <script src="js/bundle.js"></script>
@@ -22,6 +22,7 @@
     <div class="Reserved-2"></div>
 
     <div class="Options">
+        <div class="option0"></div>
         <div class="option1">
             <h4>Words</h4>
             <select id="word-form">
@@ -78,6 +79,7 @@
                     <option value="30k">30k</option>
             </select>
         </div>
+        <div class="option0"></div>
     </div>
 
     <div class="Results"></div>
