--- a/client/public/index.html
+++ b/client/public/index.html
@@ -78,7 +78,9 @@
         </div>
     </div>
     <div class="Results"></div>
-    <div class="Footer"></div>
+    <div class="Footer">
+        <div class="FooterEntropy"></div>
+    </div>
 </div>
 
 
